--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
             <button id="go">Go</button>
         </div>
     </div>
+    <script src="js/util.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
     <script src="js/main.js"></script>
