--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
     <script src="js/util.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
+    <script src="js/terrain-generator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
