--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         </div>
     </div>
     <script src="js/util.js"></script>
+    <script src="js/canvas.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
     <script src="js/main.js"></script>
