show/accept seed value

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,8 @@
         <canvas id="canvas"></canvas>
         <div id="controls">
             <button id="go">Go</button>
+            <label for="seed">Seed:</label>
+            <input type="text" id="seed"/>
         </div>
     </div>
     <script src="js/util.js"></script>
