moving erosion code into separate file

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
     <script src="js/canvas.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
+    <script src="js/erosion.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
