--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,8 @@
     <div id="container">
         <canvas id="canvas"></canvas>
         <div id="controls">
-            <button id="go">Go</button>
+            <button id="erode">Erode</button>
+            <button id="contour">Contour</button>
             <label for="seed">Seed:</label>
             <input type="text" id="seed"/>
         </div>
@@ -19,6 +20,7 @@
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
     <script src="js/erosion.js"></script>
+    <script src="js/contours.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
