added smoothing, match colours with contours

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <div id="controls">
             <button id="erode">Erode</button>
             <button id="contour">Contour</button>
+            <button id="smooth">Smooth</button>
             <label for="seed">Seed:</label>
             <input type="text" id="seed"/>
         </div>
