--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <div id="controls">
             <button id="erode">Erode</button>
             <button id="contour">Contour</button>
+            <button id="wave">Waves</button>
             <button id="smooth">Smooth</button>
             <label for="seed">Seed:</label>
             <input type="text" id="seed"/>
@@ -22,6 +23,7 @@
     <script src="js/view.js"></script>
     <script src="js/erosion.js"></script>
     <script src="js/contours.js"></script>
+    <script src="js/waves.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
