--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Landscape Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -10,6 +11,7 @@
         <canvas id="canvas"></canvas>
         <div id="controls">
             <button id="erode">Erode</button>
+            <button id="rivers">Rivers</button>
             <button id="contour">Contour</button>
             <button id="wave">Waves</button>
             <button id="smooth">Smooth</button>
@@ -24,6 +26,7 @@
     <script src="js/erosion.js"></script>
     <script src="js/contours.js"></script>
     <script src="js/waves.js"></script>
+    <script src="js/smoothing.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
