--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,12 @@
             <input type="text" id="seed"/>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/util.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
+    <script src="js/mapRenderer.js"></script>
     <script src="js/erosion.js"></script>
     <script src="js/contours.js"></script>
     <script src="js/waves.js"></script>
