roads implementation - wip

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
     <script src="js/erosion.js"></script>
     <script src="js/contours.js"></script>
     <script src="js/waves.js"></script>
+    <script src="js/roads.js"></script>
     <script src="js/smoothing.js"></script>
     <script src="js/main.js"></script>
 </body>
