--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,11 @@
             <div id="status"></div>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/canvas.js"></script>
+    <script src="js/mapRenderer.js"></script>
     <script src="js/view.js"></script>
     <script src="js/main.js"></script>
 </body>
