--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
         <canvas id="canvas"></canvas>
         <div id="controls">
             <div id="seedRow">
-                <input type="text" id="seed" />
+                <input type="number" id="seed" />
                 <button id="randomSeed">RND</button>
                 <button id="go">GO</button>
             </div>
