minor fixes, download button

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
             <button id="rivers">Rivers</button>
             <button id="contour">Contours</button>
             <button id="wave">Waves</button>
+            <button id="download">Download</button>
             <div id="status"></div>
         </div>
     </div>
